deployments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
  name: customer-bluegreen
spec:
  finalizers:
  - kubernetes
