deployments/ocp-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blue
    app.kubernetes.io/component: blue
    app.kubernetes.io/instance: blue
  name: blue
  namespace: customer-bluegreen
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: blue
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
