deployments/ocp-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: green
    app.kubernetes.io/component: green
    app.kubernetes.io/instance: green
  name: green
  namespace: customer-bluegreen
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: green
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
